added citations to sync implementation

--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -76,3 +76,26 @@ year = {2004},
 isbn = {0-13-111155-8}
 }
 
+@misc{
+mysqlconnectorj,
+author = {MySQL},
+title = {Download Connector/J},
+year = {2013},
+url = {http://dev.mysql.com/downloads/connector/j/}
+}
+
+@misc{
+sqliteopenhelper,
+author = {MySQL},
+title = {SQLiteOpenHelper Documentation},
+year = {2013},
+url = {http://developer.android.com/reference/android/database/sqlite/SQLiteOpenHelper.html}
+}
+
+@misc{
+asynctask,
+author = {MySQL},
+title = {AsyncTask Documentation},
+year = {2013},
+url = {http://developer.android.com/reference/android/os/AsyncTask.html}
+}
