formatting of product backlog and some corrections for common report

--- a/report/tex/commonReport/pictogram.tex
+++ b/report/tex/commonReport/pictogram.tex
@@ -17,11 +17,11 @@ Pictograms are commonly used as means of communication, especially by those requ
         \caption{\label{img:pic_current} Pictograms in use 2013}
 \end{figure}
 During the spring semester of 2013, when this report was written, the use of pictograms is mostly in the form of physical images. The images need to be drawn and/or edited, printed, cut out and then laminated to extend their lifespan. After this process the pictograms are ready for use, generally for one individual, making this repetitive and tedious for the guardians.% \todo{Klim: Bliver dette virkelig kun brugt for et enkelt barn? Kan mapper ikke deles af flere b{\o}rn? Biggi: Nej det kan de ikke, det er blevet sagt af kontakt-person}
-When the required amount of pictograms have been created for an individual, they need to be organized and made accessible with the help of some sort of container. This container can be a folder with a pocket for the pictograms and a velcro-like strip for arranging the pictograms. For communication an individual can choose to form sentences by arranging the pictograms accordingly or use a single image to simply express needs and wants. Another purpose of the pictograms can be to graphically represent instructions for various tasks, in the form of ``do \textbf{A}, followed by \textbf{B} and lastly do \textbf{C}'' for individuals requiring special assistance.
+When the required amount of pictograms have been created for an individual, they need to be organized and made accessible with the help of some sort of container. This container can be a folder with a pocket for the pictograms and a velcro-like strip for arranging the pictograms. For communication an individual can choose to form sentences by arranging the pictograms accordingly or use a single image to simply express needs and wants. Another purpose of the pictograms is depicted in \autoref{img:pic_current} where instructions are graphically represented for various tasks, in the form of ``do \textbf{A}, followed by \textbf{B} and lastly do \textbf{C}'' for individuals requiring special assistance.
 
 \subsubsection*{Digitizing the Pictogram}
 %What's new, what had previous groups implemented, reflect on why it had to be redone.
-The \ac{giraf} project focuses on simplifying and digitizing a medium used by individuals with autism and their guardians. This includes digitizing the pictograms, making them available on devices running Android with added functionality. Added functionality includes the option to make the pictograms play a sound, dynamically change the layout of text-labels and editing images. Digitizing the pictogram also makes it possible to share them easily, carry them between devices and make backups of them. Previously, with the same idea in mind, it was attempted to digitize the pictogram. It was considered unsatisfactory (see section below) and therefore the re-implementation in this semester's project.
+The \ac{giraf} project focuses on simplifying and digitizing a medium used by individuals with autism and their guardians. This includes digitizing the pictograms, making them available on devices running Android with added functionality. Added functionality includes the option to make the pictograms play a sound, dynamically change the layout of text-labels and editing images. Digitizing the pictogram also makes it possible to share them easily, carry them between devices and make backups of them. Previously, with the same idea in mind, it was attempted to digitize the pictograms. It was considered unsatisfactory (see section below) and therefore the re-implementation in this semester's project.
 
 \subsubsection*{GIRAF Pictogram Design}
 %What is the pictogram (basically). What are the ideas behind the current design.
