--- a/report/tex/commonReport/sec3-2.tex
+++ b/report/tex/commonReport/sec3-2.tex
@@ -1,4 +1,4 @@
 \section{Pictograms, Morgana, and Design Guidelines}
-In this section the notion of a pictogram will be presented followed by how pictograms are currently being used and why they should be digitized. Furthermore the section includes a description of the Morgana library.
+In this section the notion of a pictogram is be presented followed by a description on how pictograms are currently being used and why they should be digitized. Furthermore the section includes a description of the Morgana library.
 
-The section will be rounded off with the overall design guidelines for the entire \ac{giraf} system.
+The section is be rounded off with the overall design guidelines for the entire \ac{giraf} system.
