--- a/report/tex/introduction/chapter.tex
+++ b/report/tex/introduction/chapter.tex
@@ -5,4 +5,4 @@
 
 \input{tex/introduction/giraf_architechture}
 
-%\input{tex/introduction/problem_statement}
+\input{tex/process_progress/problem_statement}
