--- a/report/tex/introduction/introduction.tex
+++ b/report/tex/introduction/introduction.tex
@@ -1,2 +1,12 @@
-As mentioned in the common chapter\todo{insert reference to common chapter}, Giraf's main objective is to improve communication between children with autism and their guardians. The primary tool for the communication will be a tablet that the children will use either alone or with their guardian. In this context a single tablet needs to be able to accommodate many different children with individual preferences meanwhile children should not be dependent on one particular tablet, but should be able to use any tablet with the Giraf system installed. 
-As a consequence the Giraf project will need two types of databases. A local database located on the individual tablets and a central database that the individual tablets should be able to synchronize up against. As children with autism have very specific needs, their individual preferences need to be stored on one tablet and possibly retrieved on another. Without the databases the Giraf system will not be able to store individual preferences and won't be able to synchronize preferences across different tablets not fulfilling it's primary purpose.
+As mentioned in \autoref{cha:common}, \ac{giraf}'s main objective is to improve communication between children
+with autism and their guardians. The primary tool for the communication will be a tablet that the children will
+use either alone or with their guardian. In this context a single tablet needs to be able to accommodate many
+different children with individual preferences. The children should not be dependent on one particular tablet, but
+should be able to use any tablet with the \ac{giraf} system installed. 
+As a consequence the \ac{giraf} project will need two types of databases. A local database on the individual
+tablets and a central database that the tablets should be able to synchronize with. As children with autism have
+very specific needs, their individual preferences need to be stored on one tablet and possibly retrieved on
+another. Without the databases the \ac{giraf} system will not be able to store individual preferences and will not
+be able to synchronize preferences across different tablets.
+
+A problem statement will be given at the end of this chapter.
