--- a/report/tex/introduction/sprints_reflection.tex
+++ b/report/tex/introduction/sprints_reflection.tex
@@ -1,4 +1,4 @@
-\section*{Sprints \& Reflections}
+\section*{Sprints and Reflections}
 \subsection{Week 10}
 This week Sprint 1 started. We started distributing work between group members. We started working on the connection library and the database library. Furthermore, we started taking requests from other groups. We also had discussions about the database schema, but no real progress was made.
 
