--- a/report/tex/introduction/workflow.tex
+++ b/report/tex/introduction/workflow.tex
@@ -1,8 +1,8 @@
 \section{Workflow}
-This section will describe the act of accessing the central database through API's from the Android applications, and explain the steps we take for this to happen. There are two ways to access the database, one for the Android applications, and one for the administration interface. This is done because the administration interface needs to be able to edit settings and manage users and profiles for the children. This means that the administration interface can connect directly to the central server and edit the central database.
+This section will describe the act of accessing the central database through an \ac{api} from the Android applications, and explain the steps taken for this to happen. There are two ways to access the database, one for the Android applications, and one for the administration interface. This is done because the administration interface needs to be able to edit settings and manage users and profiles for the children. This means that the administration interface can connect directly to the central server via a PC.
 
-When an Android application is requesting data from the local database called OasisLib, and the data is not in the local database, the request will be sent to the central server. The central server then makes a request to the central database, and sends the results back to the local database. The application will then get the results from the local database. This is done so the application does not have to know whether the requested data is in the local or central database, the application will get the data either way, if there is a steady connection to the server. Requests between the applications and the local database, as well as between the local and central database, will be written in JSON. JSON was chosen because the request has to be interpreted by different systems written in both Java and C++.
+When an Android application is requesting data from the local database called OasisLib, and the data is not in the local database, the request will be sent to the central server. The central server then makes a request to the central database, and sends the results back to the local database. The application will then get the results from the local database. This is done so the application does not have to know whether the requested data is in the local or central database, the application will get the data either way, if there is a steady connection to the server. Requests between the applications and the local database, as well as between the local and central database, will be written in \ac{json}. \ac{json} was chosen because the request has to be interpreted by different systems written in both Java and C++.
 
-To be able to accommodate many different Android application settings in the database, we have chosen to store all settings in binary large objects, also known as blobs. Blobs are stored as a single entity in the database, and will include all settings of an application. Because of this, every application must be able to encode and decode their own blob, as it is different for every application. Having every single application encoding and decoding their own blob may seem wasteful of resources, but it enables every application to save precisely the data it needs, without having to rework the database.
+To be able to accommodate many different Android application settings in the database, all settings are stored in binary large objects, also known as blobs. Blobs are stored as a single entity in the database, and will include all settings of an application. Because of this, every application must be able to encode and decode their own blob.
 
-Every Android application can have different settings for each user, in most cases likely a child, that has access to use it. This makes it possible to, for example save each child's favorite pictograms, without having to save them for other children. This feature is handled by the database, where each user has a separate entry in the applications table.
+Every Android application can have different settings for each user, in most cases likely a child, that has access to use it. This, for example, makes it possible to save each child's favourite pictograms, without having to save them for other children. This feature is handled by the database.
