--- a/report/tex/preface.tex
+++ b/report/tex/preface.tex
@@ -1,2 +1,14 @@
 \chapter*{Preface}
-The following report is the result of the SW6f13 project for 6th-semester students of Software Engineering at Aalborg University. The project is a subproject of the Giraf project.	
+The following report is the result of the SW6F13 project for 6th-semester students of Software Engineering at
+Aalborg University. The project is a subproject of the GIRAF project.
+
+The report expects the reader to have a basic understanding of databases, client/server communication, C++ and
+MySQL, SQLite, Java and the agile project development method SCRUM. 
+
+The purpose of this project is to design a central server for the GIRAF project and implement synchronization between a local and central database.
+
+The product of this project is this report and an implementation of a MySQL database, an API for database communication, a server application, local database on an Android device and synchronization between the two databases.
+
+The group would like to thank Katja Hose for excellent supervision during the semester.
+
+
