--- a/report/tex/process_progress/chapter.tex
+++ b/report/tex/process_progress/chapter.tex
@@ -1,8 +1,8 @@
-\chapter{Process \& Progress}
+\chapter{Process and Progress}
 %\chapter{Sprints \& Reflections}
 \input{tex/process_progress/introduction}
 
-\input{tex/process_progress/problem_statement}
+%\input{tex/process_progress/problem_statement}
 
 \input{tex/process_progress/approach}
 
