--- a/report/tex/process_progress/problem_statement.tex
+++ b/report/tex/process_progress/problem_statement.tex
@@ -1,8 +1,8 @@
 \section{Problem Statement}
-The GIRAF system should seamlessly synchronize information across a large number of tablets.
+The \ac{giraf} system should seamlessly synchronize information across a large number of tablets.
 
-Today the GIRAF system is able to store its information locally on a tablet. But each tablet needs to be customized to individual children's specific needs. However the children must not be dependent on a specific tablet. This means that some sort of synchronization is needed.
+Today the \ac{giraf} system is able to store its information locally on a tablet. But each tablet needs to be customized to individual children's specific needs. However the children should not be dependent on a specific tablet. This means that some sort of synchronization is needed.
 
 This requires a central database to be set up on a server, allowing the users to connect and update their local databases via the Internet. 
 
-We will use a SCRUM development method to address this issue.
+We will use a SCRUM development method in addressing this issue. We will develop a central server application to facilitate synchronization between tablets.
