--- a/report/tex/process_progress/product_backlog.tex
+++ b/report/tex/process_progress/product_backlog.tex
@@ -1,5 +1,5 @@
 \section{Product Backlog}
-Since the start of the semester all of the task that we performed were first acquired and added to our product backlog. The tasks were prioritized and added to sprint backlogs and as work progressed new task were added to the backlog and tasks that were completed got a check mark. The following table contains the product backlog for the project.
+The tasks were prioritized and added to sprint backlogs and as work progressed new task were added to the backlog and tasks that were completed got a check mark. The following table contains the product backlog for the project.
 
 \begin{center}
 	\begin{tabular}{| c | l | c | c | l |}
