--- a/report/tex/commonReport/thanks.tex
+++ b/report/tex/commonReport/thanks.tex
@@ -1,5 +1,5 @@
 \section{Acknowledgement}
-The group of students working with \ac{giraf} during the spring semester of 2013, would like to thank the contacts, who were;
+The group of students working with \ac{giraf} during the spring semester of 2013, would like to thank the contacts, who were:
 
 \begin{description}
 \item [Tove S{\o}by] - speech therapist, and contact for three groups.
